ci/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: idukvrachu-backend
  labels:
    app: idukvrachu
    component: backend
spec:
  type: ClusterIP
  selector:
    app: idukvrachu
    component: backend
  ports:
    - name: http
      port: 80
      targetPort: 8000
